# steamguard-cli

./: .gitignore  .gitmodules  AssemblyInfo.cs  Cargo.toml  Manifest.cs  PKGBUILD  Program.cs  README.md  Utils.cs  bash-tab-completion  makefile  makefile.macos  package.sh  rustfmt.toml  steamguard-cli.csproj  steamguard-cli.sln
.github/: FUNDING.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: aur-checker.yml  aur.yml  pullfrog.yml  release.yml  rust.yml  rustfmt.yml
docs/: quickstart.md
metalmann/: Cargo.toml
metalmann-cli/: Cargo.toml
metalmann-cli/src/: cli.rs  main.rs
metalmann-proto/: Cargo.toml
metalmann-proto/protos/: base_gcmessages.proto  build.sh  econ_gcmessages.proto  gcsdk_gcmessages.proto  gcsystemmsgs.proto  steammessages.proto  tf_gcmessages.proto  tf_proto_def_messages.proto
metalmann-proto/src/: base_gcmessages.rs  econ_gcmessages.rs  gcsdk_gcmessages.rs  gcsystemmsgs.rs  lib.rs  mod.rs  steammessages.rs  tf_gcmessages.rs  tf_proto_def_messages.rs
metalmann/src/: crafting.rs  errors.rs  inventory.rs  lib.rs  schema.rs  tf2meta.rs  webapi.rs
metalmann/src/fixtures/api-responses/: GetPlayerItems-76561198054667933.json  GetSchemaItems-page1.json  GetSchemaOverview.json
scripts/: check-aur.sh  convert_and_export_mafile.py  full-release.sh  package-deb.sh  publish-aur.sh
scripts/docker/arch/: Dockerfile  install.sh
snap/: snapcraft.yaml
src/: accountlinker.rs  accountmanager.rs  cli.rs  commands.rs  confirmation.rs  debug.rs  demos.rs  encryption.rs  errors.rs  http_server.rs  lib.rs  login.rs  main.rs  prompt_backend.rs  secret_string.rs  steamapi.rs  test_login.rs  tui.rs  updater.rs
src/accountmanager/: legacy.rs  manifest.rs  migrate.rs  steamv2.rs  winauth.rs
src/commands/: approve.rs  code.rs  completions.rs  confirm.rs  debug.rs  decrypt.rs  encrypt.rs  gui.rs  import.rs  list.rs  qr.rs  qr_login.rs  remove.rs  server.rs  setup.rs  status.rs  trade.rs  upgradetoken.rs
src/encryption/: argon2id_aes.rs  keyring.rs  legacy.rs
src/fixtures/maFiles/compat/1-account/: 1234.maFile  1234_NoWebCookie.maFile  manifest.json
src/fixtures/maFiles/compat/1-account-encrypted/: 1234.maFile  manifest.json
src/fixtures/maFiles/compat/2-account/: 5678.maFile  manifest.json
src/fixtures/maFiles/compat/difficult-migration/: generate.sh  manifest.json  missing-OAuthToken.maFile  missing-SessionID.maFile  missing-SteamID.maFile  missing-SteamLogin.maFile  missing-SteamLoginSecure.maFile  missing-WebCookie.maFile  null-OAuthToken.maFile  null-SessionID.maFile  null-SteamID.maFile  null-SteamLogin.maFile  null-SteamLoginSecure.maFile  null-WebCookie.maFile
src/fixtures/maFiles/compat/missing-unnecessary/: 1234.maFile
src/fixtures/maFiles/compat/no-webcookie/: manifest.json
src/fixtures/maFiles/compat/null-oauthtoken/: manifest.json  nulloauthtoken.maFile
src/fixtures/maFiles/compat/steamv2/: sample.maFile
src/fixtures/maFiles/compat/winauth/: exports.txt
src/fixtures/maFiles/manifest-v1/1-account-encrypted/: 1234.maFile  manifest.json  manifest.json.bak
src/fixtures/maFiles/manifest-v1/2-account/: 5678.maFile  manifest.json
src/fixtures/maFiles/manifest-v1/missing-account-name/: 1234.maFile  manifest.json
steamguard/: Cargo.toml  LICENSE-MIT  README.md  build.rs
steamguard/protobufs/: common_base.proto  custom.proto  enums.proto  service_phone.proto  service_twofactor.proto
steamguard/src/: accountlinker.rs  approver.rs  confirmation.rs  jwt.rs  lib.rs  phonelinker.rs  protobufs.rs  qrapprover.rs  refresher.rs  secret_string.rs  steamapi.rs  token.rs  userlogin.rs
steamguard/src/api_responses/: i_authentication_service.rs  i_two_factor_service.rs  login.rs  mod.rs  phone_ajax.rs
steamguard/src/fixtures/api-responses/: add-authenticator-1.json  add-authenticator-2.json  login-response-missing-webcookie.json  login-response1.json
steamguard/src/fixtures/confirmations/: README.md  email-change.html  email-change.json  multiple-confirmations.html  need-auth.json  phone-number-change.html  phone-number-change.json
steamguard/src/fixtures/maFiles/1-account/: 1234.maFile
steamguard/src/steamapi/: authentication.rs  phone.rs  twofactor.rs
steamguard/src/transport/: mod.rs  webapi.rs
