[package]
name = "metalmann-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
thiserror = "1.0.26"
clap = { version = "3.1.18", features = ["derive", "cargo", "env"] }
metalmann = { path = "../metalmann" }
log = "0.4.14"
stderrlog = "0.4"
dirs = "3.0.2"
tokio = "1.20.1"
steamguard = { path = "../steamguard" }
