[package]
name = "metalmann"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
thiserror = "1.0.26"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "cookies", "gzip", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
chrono = { version = "0.4", features = ["serde"] }
maplit = "1.0.2"
once_cell = "1.13.0"
serde_repr = "0.1"
steam-vent = { git = "https://github.com/juliarose/steam-vent.git" }
tokio = "1.20.1"
steamguard = { path = "../steamguard" }
secrecy = { version = "0.8", features = ["serde"] }
steamid-ng = "1.0.0"
async-std = "1.12.0"
bytes = "1.2.1"
metalmann-proto = { path = "../metalmann-proto" }
protobuf = "2.24.1"
